deployments/cloud/k8s/applications/superset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ingress
  namespace: superset
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: superset-ingress-ip
    networking.gke.io/managed-certificates: superset-ssl-cert
    networking.gke.io/v1beta1.FrontendConfig: superset-frontend-config
spec:
  rules:
    - host: superset.tuantrann.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset
                port:
                  number: 8088
